[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycallblock"
description = "Block spam calls with a USB modem."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["modem", "block", "spam", "phone", "call"]
authors = [
  {name = "AT0myks", email = "at0myks.dev@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Communications :: Fax",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording"
]
dependencies = [
    "pyserial-asyncio",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/AT0myks/pycallblock/issues"
Source = "https://github.com/AT0myks/pycallblock"

[project.scripts]
pycallblock = "pycallblock.__init__:main"

[tool.setuptools.dynamic]
version = {attr = "pycallblock.__version__"}